syntax = "proto3";

package bitesla.srv.trader;

service Trader {
    rpc ListTrader (TraderInfo) returns (TraderInfos) {
    }

    rpc PutTrader (TraderInfo) returns (TraderInfo) {
    }

    rpc GetTraderDetail (TraderInfo) returns (TraderInfo) {
    }

    rpc DeleteTrader (TraderInfo) returns (TraderInfo) {

    }

    rpc SwitchTrader (TraderInfo) returns (TraderInfo) {

    }
}

message TraderInfo {
    int64 currentLoginUserID = 1;
    int64 exchangeId = 2;
    int64 strategyId = 3;
    string name = 4;
    int32 status = 5;
    string description = 6;
    int64 createTime = 7;
    int64 updateTime = 8;
    int32 page = 9;
    int32 size = 10;
    int64 traderId = 11;
}

message TraderInfos {
    repeated TraderInfo traderInfos = 1;
}

message StrategyInfo {
    int64 currentLoginUserID = 1;
    int64 strategyId = 2;
    string name = 3;
    string description = 4;
    string script = 5;
    int32 page = 6;
    int32 size = 7;
    int64 createTime = 8;
    int64 updateTime = 9;
}